# wasm-ipacl

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs
tests/: bench.sh  blocklist  generate_cidrs.py  plugin.config  tests.textpb
